service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermanagement
spec:
  selector:
    app: userdata
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
