ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userdata-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: userdata.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: usermanagement
            port:
              number: 5000
